--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@stream44.studio/FramespaceGenesis",
-    "version": "0.1.0",
+    "version": "0.2.0-rc.1",
     "private": true,
     "scripts": {
         "test": "bun test"
