--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "push": "bunx @stream44.studio/dco push"
     },
     "devDependencies": {
-        "@stream44.studio/dco": "0.3.0-rc.21"
+        "@stream44.studio/dco": "0.3.0-rc.21",
+        "@types/bun": "^1.3.4",
+        "@types/node": "^25.0.3",
+        "bun-types": "^1.3.4"
     }
 }
