Published using @Stream44 Studio
Signed-off-by: Christoph <christoph@christoph.diy>

--- a/.github/workflows/dco.yaml
+++ b/.github/workflows/dco.yaml
@@ -1,5 +1,11 @@
 name: DCO Signatures
-on: [push, pull_request]
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   dco:
     runs-on: ubuntu-latest
