--- a/.github/workflows/gordian-open-integrity.yaml
+++ b/.github/workflows/gordian-open-integrity.yaml
@@ -1,6 +1,10 @@
 name: Gordian Open Integrity
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   gordian-open-integrity:
