--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "push": "bunx @stream44.studio/dco push"
     },
     "devDependencies": {
-        "@stream44.studio/dco": "0.3.0-rc.21",
+        "@stream44.studio/dco": "^0.3.0-rc.22",
         "@types/bun": "^1.3.4",
         "@types/node": "^25.0.3",
         "bun-types": "^1.3.4"
