Published using @Stream44 Studio
Signed-off-by: Christoph <christoph@christoph.diy>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@stream44.studio/FramespaceGenesis",
     "version": "0.2.0-rc.2",
-    "license": "LGPL",
+    "license": "(LGPL AND MIT)",
     "private": true,
     "scripts": {
         "test": "bun test",
