--- a/engines/Capsule-Ladybug-v0/api-server/package.json
+++ b/engines/Capsule-Ladybug-v0/api-server/package.json
@@ -9,8 +9,8 @@
     },
     "dependencies": {
         "lbug": "^0.14.3",
-        "@stream44.studio/encapsulate": "workspace:*",
-        "t44": "workspace:*"
+        "@stream44.studio/encapsulate": "^0.4.0-rc.21",
+        "t44": "^0.4.0-rc.20"
     },
     "devDependencies": {
         "@types/bun": "latest"
