--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
     "name": "@stream44.studio/FramespaceGenesis",
-    "version": "0.2.0-rc.2",
+    "version": "0.2.0-rc.5",
     "license": "(LGPL AND MIT)",
+    "type": "module",
     "private": true,
+    "packageManager": "bun@1.3.9",
     "scripts": {
         "test": "bun test",
+        "dev": "turbo run dev --parallel",
+        "build": "turbo run build",
+        "start": "turbo run start --parallel",
+        "postinstall": "cd node_modules/lbug && node install.js",
         "sign-dco": "bunx @stream44.studio/dco commit",
         "push": "bunx @stream44.studio/dco push"
     },
+    "dependencies": {
+        "lbug": "^0.14.3",
+        "@stream44.studio/encapsulate": "^0.4.0-rc.23",
+        "t44": "^0.4.0-rc.22"
+    },
     "devDependencies": {
-        "@stream44.studio/dco": "^0.3.0-rc.22",
+        "@stream44.studio/dco": "^0.3.0-rc.25",
         "@types/bun": "^1.3.4",
         "@types/node": "^25.0.3",
-        "bun-types": "^1.3.4"
-    }
+        "bun-types": "^1.3.4",
+        "turbo": "^2.5.0"
+    },
+    "workspaces": [
+        "engines/Capsule-Ladybug-v0/api-server",
+        "visualizations",
+        "workbench/app"
+    ]
 }
