Published using @Stream44 Studio
Signed-off-by: Christoph <christoph@christoph.diy>

--- a/engines/api-server/package.json
+++ b/engines/api-server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@framespace/ladybug-api",
+    "name": "@framespace/engine-api",
     "version": "1.0.0",
     "type": "module",
     "scripts": {
